bad/if_cond_class.example_compiler_output
ERROR
[1mbad/if_cond_class.lat:5:6: [1;31merror: [0;1mif condition has to be of type `boolean`, not `Y`[m
	if (new Y) {}
	    [1;32m^[m
